# pokmon-gen5-initseed

./: .gitignore  .spark-initial-sha  BUILD_INTEGRATION.md  ENCOUNTER_IMPLEMENTATION.md  GITIGNORE_OPTIMIZATION.md  IMPLEMENTATION_STATUS.md  INTERFACE_OPTIMIZATION_PLAN.md  PARALLEL_SEARCH_IMPLEMENTATION_PLAN.md  PARALLEL_SEARCH_TECHNICAL_GUIDE.md  PHASE3_REVISED_STRATEGY.md  PHASE_2B_IMPLEMENTATION_PLAN.md  POKEMON_GENERATOR_REFACTOR_PLAN.md  PRD.md  PROJECT_STATUS.md  README.md  REFACTORING_REPORT.md  REFACTOR_VCOUNT_STRUCTURE.md  RESPONSIVE_UI_SCALING_PLAN.md  TODO.md  UI_IMPROVEMENTS_REPORT.md  WASM_OPTIMIZATION.md  eslint.config.js  index.html  package-lock.json  package.json  test-wasm.js  test_cleanup_behavior.md  vite.config.ts  vitest.config.ts  wasm-test.html
.github/: copilot-instructions.md  copilot-meta.md
docs/: E2E_CONSISTENCY_TEST_GUIDE.md  E2E_TESTING_WITH_PLAYWRIGHT_MCP.md  OUTPUT_CONSISTENCY_TEST_DESIGN.md  ROM_PARAMETERS_MIGRATION.md  UI_IMPROVEMENTS.md  alternative-toml-implementation.md  hybrid-toml-approach.md  index.html  phase2-api.md  test-development.html
docs-backup/: OUTPUT_CONSISTENCY_TEST_DESIGN.md  PARALLEL_SEARCH_UI_INTEGRATION.md  PLAYWRIGHT_MCP_SCRIPTS.md  UI_IMPROVEMENTS.md
public/: test-consistency-e2e.html  test-development.html  test-integrated-search.html  test-integration.html  test-parallel.html  test-performance.html  test-phase2b.html
scripts/: automated-performance-test.js  build-wasm-optimized.js  copy-wasm-files.js  performance-comparison.js  run-e2e-consistency-test.js  (+1 more)
wasm-pkg/: Cargo.toml
wasm-pkg/src/: datetime_codes.rs  encounter_calculator.rs  integrated_search.rs  lib.rs  offset_calculator.rs  personality_rng.rs  pid_shiny_checker.rs  pokemon_generator.rs  search_algorithms.rs  search_result.rs  searcher.rs  sha1.rs  sha1_simd.rs  utils.rs
wasm-pkg/src/tests/: datetime_codes_tests.rs  integrated_generation_tests.rs  integrated_search_tests.rs  integrated_search_tests_new.rs  mod.rs  sha1_simd_tests.rs  sha1_tests.rs
(+234 files in other folders)
