[package]
name = "wasm-pkg"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt to avoid bulk memory issues
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
byteorder = "1.5"
js-sys = "0.3"
chrono = { version = "0.4", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Performance optimization profile for WebAssembly
[profile.release]
# Maximum optimization level for speed
opt-level = 3
# Enable fat LTO for maximum optimization across crates
lto = "fat"
# Reduce code size while maintaining performance
codegen-units = 1
# Panic handling: abort instead of unwinding (smaller binary)
panic = "abort"
# Strip debug symbols from release build
strip = true
